@@ -423,6 +423,8 @@ class CMenuPopupHelper {
 
 		$data = [
 			'type' => 'trigger',
+			'groupid' => $trigger['groupid'],
+			'hostid' => $trigger['hostid'],
 			'triggerid' => $trigger['triggerid'],
 			'items' => $items
 		];
