@@ -65,6 +65,15 @@ class CScreenTriggersOverview extends CScreenBase {
 
 		$triggers = CMacrosResolverHelper::resolveTriggerUrl($triggers);
 
+		/*
+		 * Each screen cell with "Triggers overview" depends on one specific group which in this case is 'resourceid'.
+		 * Pass it as 'groupid' to menu pop-up "Events" link.
+		 */
+		foreach ($triggers as &$trigger) {
+			$trigger['groupid'] = $this->screenitem['resourceid'];
+		}
+		unset($trigger);
+
 		return $this->getOutput(getTriggersOverview($hosts, $triggers, $this->pageFile, $this->screenitem['style'],
 			$this->screenid
 		));
